--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,11 +33,26 @@ a {
 
 #content {
     margin-top: 50px;
+    min-height: 1000px;
 }
 
 .wrapper {
     max-width: 1100px;
     margin: 0 auto;
+}
+
+section .intro-text {
+    text-align: center;
+    margin-bottom: 50px;
+}
+section .intro-text h1 {
+    color: #525252;
+    font-size: 45px;
+    margin-bottom: 30px;
+}
+section .intro-text p {
+    color: #aeaeae;
+    font-size: 20px;
 }
 
 /* ========================================
@@ -92,26 +107,57 @@ section.intro .scroll-down img {
 /* ========================================
 ** PROJECTS SECTION
 ======================================== */
-section .intro-text {
-    text-align: center;
+section.projects .projects-filter {
+    float: right;
     margin-bottom: 30px;
 }
-section .intro-text h1 {
-    font-size: 45px;
-    margin-bottom: 30px;
+section.projects .projects-filter .filter-button {
+    background: white;
+    border-radius: 4px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    display: inline-block;
+    padding: 10px;
+    margin-right: 10px;
 }
-section .intro-text p {
-    font-size: 20px;
+section.projects .projects-filter .filter-button:first-of-type {
+    margin-left: 10px;
 }
+section.projects .projects-filter .filter-button:last-of-type {
+    margin-right: 0;
+}
+section.projects .projects-filter .filter-button.active {
+    color: #3dabee;
+    font-weight: bold;
+}
+
 section.projects .project-block {
-    width: 100%;
     background: white;
     border-radius: 4px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     padding: 25px;
+    display: inline-block;
+    margin-bottom: 30px;
 }
+section.projects .project-block .project-info {
+    float: left;
+    width: 60%;
+}
+section.projects .project-block  .project-image {
+    float: right;
+    width: 40%;
+    height: 200px;
+    background: #90cef5;
+    width: 350px;
+}
+section.projects .project-block .project-info .title {
+    color: #3dabee;
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
 /* ========================================
-HEADER
+**  HEADER
 ======================================== */
 nav {
 
@@ -133,4 +179,16 @@ nav li a:hover {
 
 nav li .active {
     color: #eba14e;
+}
+
+/* ========================================
+** FOOTER
+======================================== */
+footer {
+    background: white;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
