--- a/assets/css/custom_main.css
+++ b/assets/css/custom_main.css
@@ -13,6 +13,12 @@ html {
     height: 100%;
 }
 
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 body {
     color: #80878c;
     background: #f7f9f8;
@@ -29,7 +35,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-
 }
 
 #content {
@@ -41,7 +46,12 @@ a {
     max-width: 1100px;
     margin: 0 auto;
 }
-
+section {
+    margin-top: 50px;
+}
+section:first-of-type {
+    margin-top: 0;
+}
 section .intro-text {
     text-align: center;
     margin-bottom: 50px;
@@ -56,13 +66,15 @@ section .intro-text p {
     font-size: 20px;
 }
 
-.button {
+.btn {
+    background: #333;
+    color: #fff;
+    font-weight: bold;
+    font-size: 14px;
     border-radius: 4px;
-    padding: 10px;
     display: inline-block;
-    background: #525252;
-    color: white;
-    text-decoration: none;
+    padding: 10px 20px;
+    margin-right: 10px;
 }
 .button:hover {
     background: #3dabee;
@@ -132,61 +144,112 @@ section.intro .scroll-down img {
 /* ========================================
 ** PROJECTS SECTION
 ======================================== */
-section.projects .projects-filter {
-    float: right;
-    margin-bottom: 30px;
-}
-section.projects .projects-filter .filter-button {
-    background: white;
-    border-radius: 4px;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-    display: inline-block;
-    padding: 10px;
-    margin-right: 10px;
-}
-section.projects .projects-filter .filter-button:first-of-type {
-    margin-left: 10px;
-}
-section.projects .projects-filter .filter-button:last-of-type {
-    margin-right: 0;
-}
-section.projects .projects-filter .filter-button.active {
-    color: #3dabee;
-    font-weight: bold;
+section#projects #projects-container .mix {
+    display: none;
 }
 
-section.projects .project-block {
-    background: white;
-    border-radius: 4px;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-    padding: 25px;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
+section#projects .projects-filter {
+    float: right;
     margin-bottom: 30px;
 }
-section.projects .project-block .project-left {
+
+section#projects .projects-filter .filter.btn:first-of-type {
+    margin-left: 10px;
+}
+section#projects .projects-filter .filter.btn:last-of-type {
+    margin-right: 0;
+}
+section#projects  .projects-filter .filter.btn.active {
+    background: #3dabee;
+}
+
+section#projects #projects-container {
+    display: block;
+    clear: both;
+    width: 100%;
+}
+
+section#projects .projects-container {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-section.projects .project-block .project-left .project-info {
-    float: left;
-    width: 60%;
-}
-section.projects .project-block  .project-image {
-    float: right;
-    width: 40%;
-    height: 200px;
-    background: #90cef5;
-    width: 350px;
-}
-section.projects .project-block .project-info .title {
-    color: #3dabee;
-    font-weight: bold;
-    font-size: 18px;
+    margin: 0;
     margin-bottom: 20px;
+    clear: both;
 }
+section#projects #projects-container .project {
+    flex-basis: 33.333333%;
+    height: 200px;
+    background: #333;
+    border-radius: 3px;
+    margin-right: 20px;
+}
+section#projects .projects-row .project:last-of-type {
+    margin-right: 0;
+}
+
+
+
+/* START TEST ------------------------------------------------------------------- */
+
+.container{
+    text-align: justify;
+    font-size: 0.1px;
+    -webkit-backface-visibility: hidden;
+    clear: both;
+}
+
+.container:after{
+    content: '';
+    display: inline-block;
+    width: 100%;
+}
+
+.container .mix,
+.container .gap{
+    display: inline-block;
+    width: 49%;
+}
+
+.container .mix{
+    text-align: left;
+    background: #3dabee;
+    margin-bottom: 15px;
+    display: none;
+    border-radius: 4px;
+}
+
+/*.container .mix:after{*/
+    /*content: attr(data-myorder);*/
+    /*color: white;*/
+    /*font-size: 16px;*/
+    /*display: inline-block;*/
+    /*vertical-align: top;*/
+    /*padding: 4% 6%;*/
+    /*font-weight: 700;*/
+/*}*/
+
+.container .mix:before{
+    content: '';
+    display: inline-block;
+    padding-top: 250px
+}
+
+@media all and (min-width: 420px){
+    .container .mix,
+    .container .gap{
+        width: 32%;
+    }
+}
+
+@media all and (min-width: 640px) {
+    .container .mix,
+    .container .gap {
+        /*width: 23.5%;*/
+        width: 32.5%;
+    }
+}
+
+
+/* EINDE TEST ------------------------------------------------------------------- */
 
 /* ========================================
 **  HEADER
@@ -223,4 +286,29 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+/**
+## Media queries - for making the website responsive
+**/
+
+@media all and ( min-width: 600px ) {
+
+    /* set column widths */
+    .col-2-3 {
+        width: 66.66%;
+    }
+    .col-1-2 {
+        width: 50%;
+    }
+    .col-1-3 {
+        width: 33.33%;
+    }
+    .col-1-4 {
+        width: 25%;
+    }
+    .col-1-8 {
+        width: 12.5%;
+    }
+
 }
