Projects section - added filter and hover effect

--- a/assets/css/custom_main.css
+++ b/assets/css/custom_main.css
@@ -163,58 +163,43 @@ section#projects  .projects-filter .filter.btn.active {
     background: #3dabee;
 }
 
-section#projects #projects-container {
-    display: block;
-    clear: both;
-    width: 100%;
-}
-
-section#projects .projects-container {
-    display: flex;
-    margin: 0;
-    margin-bottom: 20px;
-    clear: both;
-}
-section#projects #projects-container .project {
-    flex-basis: 33.333333%;
-    height: 200px;
-    background: #333;
-    border-radius: 3px;
-    margin-right: 20px;
-}
-section#projects .projects-row .project:last-of-type {
-    margin-right: 0;
-}
-
-
-
 /* START TEST ------------------------------------------------------------------- */
 
-.container{
+.project-container {
     text-align: justify;
     font-size: 0.1px;
     -webkit-backface-visibility: hidden;
     clear: both;
 }
 
-.container:after{
+.project-container:after {
     content: '';
     display: inline-block;
     width: 100%;
 }
 
-.container .mix,
-.container .gap{
+.project-container .mix,
+.project-container .gap {
     display: inline-block;
     width: 49%;
 }
 
-.container .mix{
+.project-container .project {
     text-align: left;
     background: #3dabee;
     margin-bottom: 15px;
     display: none;
     border-radius: 4px;
+    -moz-box-shadow: 0 1px 2px #aaa;
+    -webkit-box-shadow: 0 1px 2px #aaa;
+    box-shadow: 0 1px 2px #aaa;
+    height: 250px;
+}
+/*
+## SETUP PROJECTS IMAGES
+*/
+.project-container .mix:nth-of-type(1) {
+    background-image: url('../img/projects/bramreinold-portfolio-ronvanrielschilderwerken.jpg');
 }
 
 /*.container .mix:after{*/
@@ -227,28 +212,45 @@ section#projects .projects-row .project:last-of-type {
     /*font-weight: 700;*/
 /*}*/
 
-.container .mix:before{
-    content: '';
-    display: inline-block;
-    padding-top: 250px
-}
+/*.project-container .mix:before{*/
+    /*content: '';*/
+    /*display: inline-block;*/
+    /*padding-top: 250px*/
+/*}*/
 
 @media all and (min-width: 420px){
-    .container .mix,
-    .container .gap{
+    .project-container .mix,
+    .project-container .gap{
         width: 32%;
     }
 }
 
 @media all and (min-width: 640px) {
-    .container .mix,
-    .container .gap {
+    .project-container .mix,
+    .project-container .gap {
         /*width: 23.5%;*/
         width: 32.5%;
     }
 }
 
-
+/*Projects hover setup*/
+.project-hover {
+    background-color: rgba(0,0,0,0.6);
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+}
+.actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.actions .btn {
+    background: #3dabee;
+    text-decoration: none;
+}
 /* EINDE TEST ------------------------------------------------------------------- */
 
 /* ========================================
