--- a/assets/css/custom_main.css
+++ b/assets/css/custom_main.css
@@ -84,11 +84,12 @@ section .intro-text p {
 /* ========================================
 ** INTRO SECTION
 ======================================== */
-section.intro {
+section#intro {
     /*background: linear-gradient(#ffa949, transparent 50%),*/
     /*linear-gradient(0deg, #fff, transparent),*/
     /*#ffa949 ;*/
     background: #3dabee;
+    background-image: url('../img/bg_mask_white.png');
     height: 100%;
     width: 100%;
     display: flex;
@@ -106,10 +107,10 @@ section.intro {
     background: white;
     border: 2px solid white;
 }
-section.intro .content {
+section#intro .content {
 
 }
-section.intro .content h1 {
+section#intro .content h1 {
     font-weight: bold;
     color: white;
     font-size: 82px;
@@ -117,14 +118,14 @@ section.intro .content h1 {
     text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
     margin: 50px 0;
 }
-section.intro .content p {
+section#intro .content p {
     color: white;
     font-size: 24px;
     margin: 0 0 10px 0;
     text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
     -webkit-font-smoothing: subpixel-antialiased;
 }
-section.intro .scroll-down {
+section#intro .scroll-down {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -135,7 +136,7 @@ section.intro .scroll-down {
     color: #90cef5;
     font-style: italic;
 }
-section.intro .scroll-down img {
+section#intro .scroll-down img {
     width: 25px;
     height: 25px;
     margin-top: 10px;
@@ -251,13 +252,22 @@ section#projects  .projects-filter .filter.btn.active {
     background: #3dabee;
     text-decoration: none;
 }
-/* EINDE TEST ------------------------------------------------------------------- */
+.actions .btn:hover {
+    background: #eeab48;
+}
 
 /* ========================================
 **  HEADER
 ======================================== */
-nav {
-
+header {
+    width: 100%;
+    height: 100px;
+    z-index: 999;
+    background: #fff;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
+}
+header nav {
+    float: right;
 }
 nav ul {
     list-style-type:  none;
