--- a/assets/css/custom_main.css
+++ b/assets/css/custom_main.css
@@ -261,31 +261,37 @@ section#projects  .projects-filter .filter.btn.active {
 ======================================== */
 header {
     width: 100%;
-    height: 100px;
+    height: 50px;
     z-index: 999;
     background: #fff;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
 }
-header nav {
-    float: right;
+header .header-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
 }
-nav ul {
+nav#main-menu ul {
     list-style-type:  none;
 }
-nav li {
+nav#main-menu ul li {
     padding: 0 20px;
-    line-height: 80px;
     display: inline-block;
 }
-nav li:last-child {
+nav#main-menu ul li:last-child {
     padding-right: 0;
 }
-nav li a:hover {
-    color: #eba14e;
+nav#main-menu ul li a {
+    text-decoration: none;
+    color: #aeaeae;
 }
-
-nav li .active {
-    color: #eba14e;
+nav#main-menu ul li a:hover {
+    color: #3dabee;
+}
+nav#main-menu ul li a.active {
+    color: #3dabee;
+    font-weight: bold;
 }
 
 /* ========================================
