--- a/assets/css/custom_main.css
+++ b/assets/css/custom_main.css
@@ -53,6 +53,18 @@ a::after {
     visibility:hidden;
 }
 
+/* Form global setups */
+input, textarea {
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: none;
+    border: none;
+    background: #eaeaea;
+    color: #aeaeae;
+    font-family: Raleway , Open-sans, sans-serif;
+    font-size: 14px;
+}
+
 #content {
     margin-top: 50px;
     min-height: 1000px;
@@ -339,27 +351,45 @@ a::after {
     margin-bottom:-1px;
 }
 
-/**
-## Media queries - for making the website responsive
-**/
 
-@media all and ( min-width: 600px ) {
-
-    /* set column widths */
-    .col-2-3 {
-        width: 66.66%;
-    }
-    .col-1-2 {
-        width: 50%;
-    }
-    .col-1-3 {
-        width: 33.33%;
-    }
-    .col-1-4 {
-        width: 25%;
-    }
-    .col-1-8 {
-        width: 12.5%;
-    }
-
+/* ========================================
+** CONTACT SECTION
+======================================== */
+section#contact .contact-wrapper {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+section#contact .contact-wrapper h2 {
+    margin-bottom: 20px;
+}
+section#contact .contact-wrapper .contact-info span {
+    margin-right: 10px;
+}
+section#contact .contact-wrapper .contact-info p {
+    margin-bottom: 10px;
+}
+section#contact .contact-wrapper input {
+    margin-right: 15px;
+    margin-bottom: 15px;
+}
+section#contact .contact-wrapper input:last-of-type {
+    margin-right: 0;
+}
+section#contact .contact-wrapper textarea {
+    width: 96.5%;
+    height: 100px;
+    margin-bottom: 15px;
+}
+section#contact .contact-wrapper input[type="submit"] {
+    font-weight: bold;
+    background: #3dabee;
+    color: #fff;
+    float: right;
+}
+section#contact .contact-wrapper input[type="submit"]:hover {
+    background: #eeab48;
+}
+section#contact .contact-wrapper  a {
+    color: #3dabee;
 }
