--- a/assets/css/custom_main.css
+++ b/assets/css/custom_main.css
@@ -292,6 +292,7 @@ header {
     z-index: 999;
     background: #fff;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
+    /*display: none;*/
 }
 header .logo {
     background-image: url("../img/bramreinold-logo-small-white.png");
