--- a/assets/css/custom_main.css
+++ b/assets/css/custom_main.css
@@ -67,7 +67,6 @@ input, textarea {
 }
 
 #content {
-    margin-top: 50px;
     min-height: 1000px;
 }
 
@@ -76,9 +75,9 @@ input, textarea {
     margin: 0 auto;
 }
 section {
-    margin-top: 50px;
+   margin-top: 150px;
 }
-section:first-of-type {
+section#intro {
     margin-top: 0;
 }
 section .intro-text {
@@ -333,7 +332,7 @@ nav#main-menu ul li a {
 nav#main-menu ul li a:hover {
     color: #3dabee;
 }
-nav#main-menu ul li a.active {
+nav#main-menu ul li a.nav-active {
     color: #3dabee;
     font-weight: bold;
 }
