--- a/assets/css/custom_main.css
+++ b/assets/css/custom_main.css
@@ -164,9 +164,9 @@ section#intro .content p {
 section#intro .scroll-down {
     position: absolute;
     bottom: 0;
+    left: 0;
+    right: 0;
     width: 100%;
-    margin: 0 auto;
-    text-align: center;
     color: white;
     font-size: 16px;
     color: #90cef5;
